fix: Merit Section small change

--- a/client/src/components/Home/Merit/Merit.module.css
+++ b/client/src/components/Home/Merit/Merit.module.css
@@ -35,7 +35,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  width: 800px;
+  width: 920px;
   height: 400px;
   margin: 0 10px;
 }
@@ -60,7 +60,7 @@
 .meritTitleIcon {
   display: flex;
   height: auto;
-  padding: 4px 20px;
+  padding: 2px 20px;
   font-size: 20px;
   font-weight: bold;
   text-align: center;
@@ -70,6 +70,7 @@
 }
 
 .meritItem h2 {
+  display: flex;
   font-size: 24px;
   font-weight: bold;
 }
